soundcloud upload, dropbox login changed, Contants hash becomes open struct

--- a/config/dropbox.yml
+++ b/config/dropbox.yml
@@ -1,15 +1,15 @@
 development:
-  public_dir: https://dl.dropboxusercontent.com/u/11357483
-  consumer_key: 0pk3wj3qyq7be7q
-  consumer_secret: v6ujmd2ywlcgtq7
+  public_dir: https://dl.dropboxusercontent.com/u/193053939
+  consumer_key: kavrfpcn402v41s
+  consumer_secret: if7o8hdv560ber5
 test:
   public_dir: https://dl.dropboxusercontent.com/u/11357483
   consumer_key: 0pk3wj3qyq7be7q
   consumer_secret: v6ujmd2ywlcgtq7
 staging:
-  public_dir: https://dl.dropboxusercontent.com/u/11357483
-  consumer_key: 0pk3wj3qyq7be7q
-  consumer_secret: v6ujmd2ywlcgtq7
+  public_dir: https://dl.dropboxusercontent.com/u/193053939
+  consumer_key: kavrfpcn402v41s
+  consumer_secret: if7o8hdv560ber5
 qa:
   public_dir: https://dl.dropboxusercontent.com/u/11357483
   consumer_key: 0pk3wj3qyq7be7q
