--- a/config/dropbox.yml
+++ b/config/dropbox.yml
@@ -1,6 +1,7 @@
 development:
   public_dir: http://dl.dropboxusercontent.com/u/193053939
   tmp_dir: "/tmp/ivr"
+  home: /Users/lliu/Dropbox
   consumer_key: gm7c12wyv6p4ogh
   consumer_secret: 33q9n3m2sz7ss0y
 #  consumer_key: qze5bzw7e8az7qz
@@ -12,11 +13,13 @@ test:
 staging:
   public_dir: http://dl.dropboxusercontent.com/u/193053939
   tmp_dir: "/data/ivr"
+  home: /home/ubuntu/Dropbox
   consumer_key: gm7c12wyv6p4ogh
   consumer_secret: 33q9n3m2sz7ss0y
 production:
   public_dir: http://dl.dropboxusercontent.com/u/193053939
   tmp_dir: "/data/ivr"
+  home: /home/ubuntu/Dropbox
   consumer_key: gm7c12wyv6p4ogh
   consumer_secret: 33q9n3m2sz7ss0y
 
